# karstgeo

./: .gitignore  README.md
01_modeling/: 10_geopark_segment_refactored.ipynb  20_geopark_source_function_analysis_refactored.ipynb  GeoPark_station_consensus_picks.csv  geopark_betsy_hammer_source_comparison.ipynb  geopark_cleaned.ipynb  geopark_consensus_source_function_analysis.ipynb
01_modeling/specfem2d/: README.md  explore_specfem_output.ipynb  explore_specfem_output_cleaned.ipynb  explore_specfem_output_refactored.ipynb  other_specfem_functions.py  pyproject.toml  seismic_gather_utils_refactored.py  specfem_output_tools_refactored.py
01_modeling/specfem2d/configs/: cave_survey.yml
01_modeling/specfem2d/scripts/: jpg_to_movie.py  plot_segy_gather.py  semv_to_segy.py
01_modeling/specfem2d/segy_tools/: __init__.py  gather.py  headers.py  io.py  picking.py  plotting.py
01_modeling/specfem2d/specfem_tools/: __init__.py  config.py  converters.py  core.py  interfaces.py  io.py  model.py  movie.py  picking.py  plotting.py  segy.py
02_processing/: 100_nodal_shot_gathers.ipynb  10_geode_shot_gathers.ipynb  10_geode_shot_gathers_filter_comparison_sarah_butter_segytools_fk_fixed_wiggles.ipynb  10_geode_shot_gathers_using_excel_metadata.ipynb  13_index_geode_datasets_into_shot_catalog.ipynb  20_nodal_to_SDS.ipynb  30_nodal_data_check.ipynb  50_compute_nodal_rsam_from_sds_v2.py  50_run_nodal_rsam_from_sds.sh  60_plot_nodal_rsam.py  60_run_plot_nodal_rsam.sh  86_downsample_GP_to_DP_in_position_sds.ipynb  89_index_geode_metadata_into_shot_catalog_REWRITTEN.ipynb  (+10 more)
(+67 files in other folders)
